Fix alignment of can

--- a/src/web/components/StatusBar.scss
+++ b/src/web/components/StatusBar.scss
@@ -9,7 +9,7 @@
   z-index: $nav-z - 1;
 
   background: $bg-raised;
-  border-bottom: 2px solid $bg-border;
+  box-shadow: inset 0 -2px 0 $bg-border;
 
   display: flex;
   align-items: center;
